--- a/composer.json
+++ b/composer.json
@@ -1,15 +1,30 @@
 {
-	"name": "mittwald/mw_matomo_widget",
-	"description": "Dashboard widget that displays visitor data of your Matomo instance",
-	"require": {
-		"php": ">=7.2.0",
-		"typo3/cms-core": "^10.4",
-		"typo3/cms-dashboard": "^10.4"
-	},
-	"type": "typo3-cms-extension",
-	"autoload": {
-		"psr-4": {
-			"Mittwald\\MatomoWidget\\": "Classes"
-		}
-	}
+  "name": "mittwald/mw_matomo_widget",
+  "description": "Dashboard widget that displays visitor data of your Matomo instance",
+  "type": "typo3-cms-extension",
+  "require": {
+    "php": ">=7.4.0",
+    "typo3/cms-core": "^11.5",
+    "typo3/cms-dashboard": "^11.5"
+  },
+  "require-dev": {
+    "friendsofphp/php-cs-fixer": "^3.0"
+  },
+  "autoload": {
+    "psr-4": {
+      "Mittwald\\MatomoWidget\\": "Classes"
+    }
+  },
+  "config": {
+    "vendor-dir": ".Build/vendor",
+    "bin-dir": ".Build/bin"
+  },
+  "extra": {
+    "typo3/cms": {
+      "cms-package-dir": "{$vendor-dir}/typo3/cms",
+      "extension-key": "mw_matomo_widget",
+      "app-dir": ".Build",
+      "web-dir": ".Build/public"
+    }
+  }
 }
