--- a/.github/workflows/code.yml
+++ b/.github/workflows/code.yml
@@ -26,3 +26,11 @@ jobs:
 
     - name: Run PHP lint
       run: find . -name \*.php ! -path "./.Build/*" | xargs -n1 php -d display_errors=stderr -l
+
+    - name: Install composer dependencies
+      run: |
+        composer install --no-progress
+
+    - name: Validate PHP coding guidelines
+      run: |
+        .Build/bin/php-cs-fixer fix --config=.php-cs-fixer.dist.php -v --dry-run --stop-on-violation --using-cache=no
