--- a/.github/workflows/code.yml
+++ b/.github/workflows/code.yml
@@ -6,12 +6,12 @@ jobs:
   build:
     strategy:
       matrix:
-        php: ['7.4', '8.0', '8.1']
+        php: ['8.1', '8.2']
     runs-on: ubuntu-latest
     name: PHP ${{ matrix.php }}
     
     steps:
-    - uses: actions/checkout@v1
+    - uses: actions/checkout@v3
       
     - name: Setup PHP
       uses: shivammathur/setup-php@v2
