--- a/composer.json
+++ b/composer.json
@@ -4,12 +4,9 @@
   "type": "typo3-cms-extension",
   "license": "GPL-2.0-or-later",
   "require": {
-    "php": ">=8.1.0",
-    "typo3/cms-core": "^12.4",
-    "typo3/cms-dashboard": "^12.4"
-  },
-  "require-dev": {
-    "friendsofphp/php-cs-fixer": "^3.0"
+    "php": ">=8.2.0",
+    "typo3/cms-core": "^13.4",
+    "typo3/cms-dashboard": "^13.4"
   },
   "autoload": {
     "psr-4": {
@@ -17,8 +14,6 @@
     }
   },
   "config": {
-    "vendor-dir": ".Build/vendor",
-    "bin-dir": ".Build/bin",
     "allow-plugins": {
       "typo3/class-alias-loader": true,
       "typo3/cms-composer-installers": true
@@ -26,10 +21,7 @@
   },
   "extra": {
     "typo3/cms": {
-      "cms-package-dir": "{$vendor-dir}/typo3/cms",
-      "extension-key": "mw_matomo_widget",
-      "app-dir": ".Build",
-      "web-dir": ".Build/public"
+      "extension-key": "mw_matomo_widget"
     }
   }
 }
