[TASK] Fixed build

--- a/.github/workflows/code.yml
+++ b/.github/workflows/code.yml
@@ -29,6 +29,7 @@ jobs:
 
     - name: Install composer dependencies
       run: |
+        cd .Build/
         composer install --no-progress
 
     - name: Validate PHP coding guidelines
